<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/go_back"
        android:title="@string/menu_go_back"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_fetch_data"
        android:title="@string/menu_fetch_data"
        android:icon="@drawable/ic_restore_black_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/menu_delete_all"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toggle_fetch_latest"
        android:title="Toggle"
        app:showAsAction="ifRoom" />
        <!--android:icon="@drawable/ic_assignment_return_black_24dp"-->


</menu>